# kafka-aggregator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  Dockerfile-dev  Makefile  README.rst  docker-compose.yaml  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: ci.yaml  docs.yaml
docs/: Makefile  api.rst  conf.py  configuration.rst  contributing.rst  development.rst  index.rst  installation.rst  manifest.yaml  release.rst  userguide.rst
examples/: join_streams.py
manifests/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
requirements/: dev.in  dev.txt  main.in  main.txt
src/kafkaaggregator/: __init__.py  aggregator.py  aggregator.yaml  aggregator_config.py  aggregator_config.yaml  app.py  cli.py  config.py  example.py  fields.py  generator.py  models.py  operations.py  test-topic-agent.py  topic_schema.py  topics.py
src/kafkaaggregator/example/: __init__.py  agents.py  aggregator_config.yaml  cli.py  example.py  models.py  on_worker_init.py
src/kafkaaggregator/handlers/: __init__.py
src/kafkaaggregator/handlers/internal/: __init__.py  index.py
src/kafkaaggregator/templates/: agent.j2
src/kafkaaggregator/testtopic/: agents.py  cli.py  models.py  on_worker_init.py
tests/: __init__.py  conftest.py  test_tumbling_window.py
tests/data/config/: aggregator_config.yaml  aggregator_config_min_sample_size.yaml
tests/example/: test_example.py
tests/handlers/internal/: index_test.py
tests/kafkaaggregator/: test_aggregator.py  test_compute.py  test_fields.py  test_operations.py  test_topic_schema.py  test_topics.py
tests/kafkaaggregator/cassettes/: test_get_fields.yaml  test_register.yaml
tests/testtopic/: test_testtopic.py
